--- a/app/src/main/res/layout/activity_make_drive.xml
+++ b/app/src/main/res/layout/activity_make_drive.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MakeRide">
+    tools:context=".MakeDrive">
 
     <EditText
         android:id="@+id/editTextDate"
@@ -78,7 +78,7 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Request Ride"
+        android:text="Create Drive"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
