--- a/app/src/main/res/layout/drive_card.xml
+++ b/app/src/main/res/layout/drive_card.xml
@@ -93,8 +93,19 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal">
 
+            <Button
+                android:id="@+id/acceptButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Accept Drive" />
 
+        </LinearLayout>
 
     </LinearLayout>
 
