--- a/app/src/main/res/layout/activity_edit_drive.xml
+++ b/app/src/main/res/layout/activity_edit_drive.xml
@@ -4,10 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditRidesList">
+    tools:context=".EditDrive">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
