--- a/app/src/main/res/layout/activity_edit_drives_list.xml
+++ b/app/src/main/res/layout/activity_edit_drives_list.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditRidesList">
+    tools:context=".EditDrivesList">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview3"
+        android:id="@+id/recyclerview4"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
