--- a/app/src/main/res/layout/accepted_ride_card.xml
+++ b/app/src/main/res/layout/accepted_ride_card.xml
@@ -103,7 +103,7 @@
                 android:id="@+id/confirmButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Accept Drive" />
+                android:text="Confirm Ride" />
 
         </LinearLayout>
 
