--- a/app/src/main/res/layout/ride_card.xml
+++ b/app/src/main/res/layout/ride_card.xml
@@ -100,7 +100,7 @@
             android:layout_gravity="center_horizontal">
 
             <Button
-                android:id="@+id/acceptButton"
+                android:id="@+id/confirmButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Accept Ride" />
