--- a/app/src/main/res/layout/edit_card.xml
+++ b/app/src/main/res/layout/edit_card.xml
@@ -109,6 +109,7 @@
                 android:id="@+id/deleteButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:theme="@style/AppButton"
                 android:text="Delete" />
 
         </LinearLayout>
