--- a/app/src/main/res/layout/ride_card.xml
+++ b/app/src/main/res/layout/ride_card.xml
@@ -103,6 +103,7 @@
                 android:id="@+id/confirmButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:theme="@style/AppButton"
                 android:text="Accept Ride" />
 
         </LinearLayout>
