--- a/app/src/main/res/menu/popup_menu.xml
+++ b/app/src/main/res/menu/popup_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_all_rides"
-        android:title="all_rides"/>
+        android:title="All Rides"/>
     <item
         android:id="@+id/action_view_profile"
-        android:title="view_profile"/>
+        android:title="View Profile"/>
 </menu>
