User can now confirm a ride as a rider or driver.

--- a/app/src/main/res/layout/accepted_ride_card.xml
+++ b/app/src/main/res/layout/accepted_ride_card.xml
@@ -94,16 +94,50 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_marginTop="12dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal">
 
             <Button
-                android:id="@+id/confirmButton"
+                android:id="@+id/button10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Confirm Ride" />
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:text="Rider Confirm" />
+
+            <Button
+                android:id="@+id/button14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:text="Driver Confirm" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal">
+
+            <TextView
+                android:id="@+id/riderTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/driverTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_weight="1"/>
 
         </LinearLayout>
 
