--- a/app/src/main/res/layout/activity_edit_drive.xml
+++ b/app/src/main/res/layout/activity_edit_drive.xml
@@ -24,7 +24,7 @@
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create"
+        android:text="Update"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
