--- a/app/src/main/res/layout/activity_make_drive.xml
+++ b/app/src/main/res/layout/activity_make_drive.xml
@@ -78,7 +78,7 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Drive"
+        android:text="Ride Offer"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
