--- a/app/src/main/res/layout/activity_edit_drives_list.xml
+++ b/app/src/main/res/layout/activity_edit_drives_list.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".EditDrivesList">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/primary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
     <ImageView
         android:id="@+id/menu_icon"
         android:layout_width="wrap_content"
